--- a/archives/zhihu-questions/2024-01-12.md
+++ b/archives/zhihu-questions/2024-01-12.md
@@ -1,33 +1,62 @@
 # 2024-01-12
 
-共 108 条
+共 121 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Fri Jan 12 2024 12:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Jan 12 2024 13:00:36 GMT+0800 (China Standard Time) -->
 1. [美国和英国对也门胡塞武装目标发动空袭，这将对红海局势产生什么影响？](https://www.zhihu.com/question/639157688)
 1. [90 后百万粉丝网红程前与周鸿祎互怼，道歉称错误低级、不可原谅，周鸿祎称年轻人犯错正常，如何看待此事？](https://www.zhihu.com/question/639069696)
 1. [深圳一房子评估价 600 万降到 200 多万，造成这一现象的原因有哪些？](https://www.zhihu.com/question/639023094)
-1. [如何看待女生在青岛栈桥帮游客拍照，遭同行威胁驱赶「免费拍也不行」？](https://www.zhihu.com/question/639013377)
-1. [我国 12 月 CPI 同比降 0.3%，全年涨 0.2%，PPI 同比降 2.7%，如何解读？](https://www.zhihu.com/question/639164159)
 1. [为什么动漫里面的衣服那么好看，现实中没有人设计成那种呢？](https://www.zhihu.com/question/628634883)
+1. [如何看待女生在青岛栈桥帮游客拍照，遭同行威胁驱赶「免费拍也不行」？](https://www.zhihu.com/question/639013377)
 1. [为什么在香港旅游时，觉得城市很旧但是莫名的高级？](https://www.zhihu.com/question/638919020)
-1. [在金庸宇宙里，男人的武功若是弱于心仪的女人，不会被这个女人看上？有反例吗？](https://www.zhihu.com/question/638864711)
+1. [我国 12 月 CPI 同比降 0.3%，全年涨 0.2%，PPI 同比降 2.7%，如何解读？](https://www.zhihu.com/question/639164159)
+1. [特斯拉国产 Model 3 降至 24.59 万，Model Y 降至 25.89万，商业上如何解读？](https://www.zhihu.com/question/639160953)
+1. [法院裁定「农妇卖 150 份粉蒸肉被判赔 5 万」案：准许撤诉，撤销原判，如何看待此事？](https://www.zhihu.com/question/639164632)
+1. [为什么米哈游能在腾讯网易的夹缝中成长起来，对于新的游戏公司可复制么？](https://www.zhihu.com/question/635984307)
 1. [如何看待荣耀 Magic6 Pro 搭载的 1.8 亿像素超大底长焦，手机长焦堆高像素有必要吗？](https://www.zhihu.com/question/639160340)
-1. [2024 年，预算 4000 - 6000 元，有哪些拍照好看的手机值得购买？](https://www.zhihu.com/question/639072927)
-1. [李铁案细节曝光，上市公司华夏幸福卷入其中，足球教练为何与上市房企扯上关系？涉事房企发展现状如何？](https://www.zhihu.com/question/639018112)
+1. [以人类目前的科技水平造得出长20公里，宽高各1公里的钢板吗？](https://www.zhihu.com/question/638691779)
+1. [谁能科普一下，《龙珠》里1万战力有多厉害？](https://www.zhihu.com/question/628930836)
 1. [为什么菩提祖师对孙悟空说“日后惹出祸来，不把师父说出来就行了”？](https://www.zhihu.com/question/420346826)
-1. [过年了，怎样送礼才能送的更健康还更有面子？](https://www.zhihu.com/question/639118342)
+1. [张艺谋导演的《第二十条》定档 2024 大年初一，对此你有何期待？](https://www.zhihu.com/question/639167880)
 1. [传统武术和西方格斗的训练理念有何不同？](https://www.zhihu.com/question/638728420)
-1. [有啥办法可以让自己自然的吃素不想吃肉么？](https://www.zhihu.com/question/636723232)
+1. [过年就是要和家人在一起「好好吃饭」，怎么样吃既有年味又没负担?](https://www.zhihu.com/question/639118650)
+1. [如何评价《大江大河3岁月如歌》？](https://www.zhihu.com/question/638641546)
+1. [友友们，相声界公认的前十名怎么排？](https://www.zhihu.com/question/387018164)
+1. [心理咨询师为什么不能给朋友或者亲人做咨询？](https://www.zhihu.com/question/634377765)
+1. [如何看待近期哈尔滨景点过于热闹，南方游客最后竟然在淘宝同城代排队？](https://www.zhihu.com/question/639161677)
+1. [李铁案细节曝光，上市公司华夏幸福卷入其中，足球教练为何与上市房企扯上关系？涉事房企发展现状如何？](https://www.zhihu.com/question/639018112)
+1. [「国企面试」搜索指数在知乎站内同比增长 274.51% ，如何看待近些年的「国企热」？](https://www.zhihu.com/question/636856050)
+1. [文笔挑战：花间一壶冷月酒，…………。下一句你会怎么接？](https://www.zhihu.com/question/634506538)
+1. [在金庸宇宙里，男人的武功若是弱于心仪的女人，不会被这个女人看上？有反例吗？](https://www.zhihu.com/question/638864711)
+1. [2024 年，预算 4000 - 6000 元，有哪些拍照好看的手机值得购买？](https://www.zhihu.com/question/639072927)
 1. [猪战斗力一点都不强，为什么至今没灭绝？](https://www.zhihu.com/question/638433995)
-1. [《英雄联盟》S14 赛季的地形改变将给游戏带来哪些影响？](https://www.zhihu.com/question/638953083)
+1. [如何评价1月11日发布的荣耀magic6系列，有哪些突出卖点和不足？](https://www.zhihu.com/question/639109183)
+1. [2024你想去哪些地方旅游，是自驾还是其它？](https://www.zhihu.com/question/638480616)
+1. [过年了，怎样送礼才能送的更健康还更有面子？](https://www.zhihu.com/question/639118342)
 1. [《繁花》中的宝总不过千万身家，凭什么能长住和平酒店套房？](https://www.zhihu.com/question/638620334)
 1. [为什么军队一旦中了埋伏，就必然会大败？](https://www.zhihu.com/question/638959905)
-1. [2024你想去哪些地方旅游，是自驾还是其它？](https://www.zhihu.com/question/638480616)
-1. [如何看待吉林大学 2022 级软院学生考试时多拿了一张草稿纸被算作违纪？](https://www.zhihu.com/question/639058831)
 1. [本人 18 岁想出去旅游，但没坐过地铁和飞机，如何安心出门？](https://www.zhihu.com/question/637792822)
-1. [《流浪地球》原著中主角军队为何「叛变」？](https://www.zhihu.com/question/518629031)
+1. [你有哪些关于绿皮火车的记忆？](https://www.zhihu.com/question/638919071)
+1. [《英雄联盟》S14 赛季的地形改变将给游戏带来哪些影响？](https://www.zhihu.com/question/638953083)
+1. [如何评价1月11日发布的荣耀Magic6系列，有哪些优点和不足？](https://www.zhihu.com/question/639100374)
+1. [东北旅游能否平替日韩？](https://www.zhihu.com/question/638908996)
+1. [荣耀 Magic6 系列相比上一代有哪些升级？](https://www.zhihu.com/question/639051743)
+1. [如何看待越来越多本科生回炉读职校？回炉学一门技能有必要吗？](https://www.zhihu.com/question/639010928)
+1. [为什么现在的手机都要配手机壳？](https://www.zhihu.com/question/638479757)
+1. [孙悟空既然学到了长生之道，为何又因阳寿已尽去大闹地府？](https://www.zhihu.com/question/34832301)
+1. [全球最大固体运载火箭，引力一号首飞成功，我国商业运载取得了哪些进展？还有哪些信息值得关注？](https://www.zhihu.com/question/639062802)
+1. [女朋友生日应该送什么礼物好？口红可以吗？](https://www.zhihu.com/question/439091288)
+1. [贾玲成功减肥 100 斤，有多不容易？有哪些减肥注意事项？](https://www.zhihu.com/question/639018155)
+1. [林黛玉没尝出梅花上的雪水这段有何深意?](https://www.zhihu.com/question/568787261)
+1. [2024年的CES国际消费电子展上有哪些黑科技国货？](https://www.zhihu.com/question/639013145)
 1. [胡塞武装证实对美军舰进行袭击，美方「击落 24 枚导弹和无人机」，哪些信息值得关注？](https://www.zhihu.com/question/639010145)
+1. [如果注定要离别，那么相遇的意义到底是什么？](https://www.zhihu.com/question/638956787)
+1. [如何评价ROG新发布的幻14 Air和幻16 Air？](https://www.zhihu.com/question/638792832)
+1. [为什么我天天盯孩子学习，他依然学不好?](https://www.zhihu.com/question/638692856)
+1. [有啥办法可以让自己自然的吃素不想吃肉么？](https://www.zhihu.com/question/636723232)
+1. [如何看待吉林大学 2022 级软院学生考试时多拿了一张草稿纸被算作违纪？](https://www.zhihu.com/question/639058831)
+1. [《流浪地球》原著中主角军队为何「叛变」？](https://www.zhihu.com/question/518629031)
 1. [如何看待荣耀 Magic6 系列手机定价 4399 元起，反映了怎样的市场策略？](https://www.zhihu.com/question/639051930)
 1. [如何理解 Elon Musk 的第一性原理？](https://www.zhihu.com/question/64080129)
 1. [面试Java岗老喜欢盯着JVM问，有那么多项目要调优吗？](https://www.zhihu.com/question/635702355)
@@ -38,19 +67,12 @@
 1. [冬天最适合去哪里旅游？](https://www.zhihu.com/question/634386723)
 1. [为什么显卡不用大小核？毕竟现在手机，平板，电脑，CPU都是大小核结构了？](https://www.zhihu.com/question/638490268)
 1. [孩子长大了，开始藏事了，作为家长怎么办？](https://www.zhihu.com/question/637511284)
-1. [你有哪些关于绿皮火车的记忆？](https://www.zhihu.com/question/638919071)
-1. [如何评价1月11日发布的荣耀magic6系列，有哪些突出卖点和不足？](https://www.zhihu.com/question/639109183)
 1. [如果甄嬛入宫后，和浣碧互换了身体，那么浣碧版的甄嬛能活多久，甄嬛作为浣碧的谋士能辅佐浣碧到最后吗？](https://www.zhihu.com/question/564666222)
 1. [电视剧《繁花》爆红的背后逻辑是什么？](https://www.zhihu.com/question/638515079)
-1. [如何看待越来越多本科生回炉读职校？回炉学一门技能有必要吗？](https://www.zhihu.com/question/639010928)
 1. [国家移民管理局推出多项新措施，进一步便利外籍人员来华，有哪些信息值得关注？](https://www.zhihu.com/question/639014885)
 1. [员工能力突出但是处处跟老板作对，这种人老板还留吗？](https://www.zhihu.com/question/638564627)
 1. [《长月烬明》女二为什么讨喜?](https://www.zhihu.com/question/624282408)
 1. [商汤发布的大模型辅助编程助手「代码小浣熊Raccoon」怎么样？](https://www.zhihu.com/question/636497646)
-1. [张艺谋导演的《第二十条》定档 2024 大年初一，对此你有何期待？](https://www.zhihu.com/question/639167880)
-1. [法院裁定「农妇卖 150 份粉蒸肉被判赔 5 万」案：准许撤诉，撤销原判，如何看待此事？](https://www.zhihu.com/question/639164632)
-1. [特斯拉国产 Model 3 降至 24.59 万，Model Y 降至 25.89万，商业上如何解读？](https://www.zhihu.com/question/639160953)
-1. [贾玲成功减肥 100 斤，有多不容易？有哪些减肥注意事项？](https://www.zhihu.com/question/639018155)
 1. [如何看待苹果 AirDrop 的匿名加密被司法鉴定机构破解？](https://www.zhihu.com/question/638768724)
 1. [中国首颗综合性太阳探测卫星「夸父一号」成功发射一年多了，它有什么重要意义？ 目前都有哪些发现？](https://www.zhihu.com/question/558276752)
 1. [如何评价荣耀Magic V2 RSR，首款折叠屏保时捷设计手机有哪些亮点？](https://www.zhihu.com/question/639076890)
@@ -69,9 +91,6 @@
 1. [程序员每天会阅读哪些技术网站来提升自己?](https://www.zhihu.com/question/629894384)
 1. [为什么公司更倾向于重新招人而不是留住老员工？](https://www.zhihu.com/question/635550954)
 1. [如果一个中国人能在皇马踢个十年首发，那他咖位有多大？](https://www.zhihu.com/question/638798149)
-1. [东北旅游能否平替日韩？](https://www.zhihu.com/question/638908996)
-1. [荣耀 Magic6 系列相比上一代有哪些升级？](https://www.zhihu.com/question/639051743)
-1. [为什么现在的手机都要配手机壳？](https://www.zhihu.com/question/638479757)
 1. [高盛表示今年沪深 300 回报率或达 19%，维持「高配」中国 A 股，哪些信息值得关注？](https://www.zhihu.com/question/639023358)
 1. [「新晋小土豆」申请北上哈尔滨，有什么好的建议和攻略给我吗？](https://www.zhihu.com/question/639038068)
 1. [2024年，深度学习，你心目中的top10算法是什么？](https://www.zhihu.com/question/638660013)
@@ -80,7 +99,6 @@
 1. [报道称「联合国一直升机在索马里遭劫持，已有 1 人死亡 2 人失踪」，哪些信息值得关注？](https://www.zhihu.com/question/639047119)
 1. [「人未到礼先至」，有哪些心意满满的年礼可以提前置办？](https://www.zhihu.com/question/637095707)
 1. [看陕西朋友一直说陕菜好吃，挺好奇，陕西的朋友能告诉大家什么是陕菜吗？](https://www.zhihu.com/question/633913087)
-1. [如何评价1月11日发布的荣耀Magic6系列，有哪些优点和不足？](https://www.zhihu.com/question/639100374)
 1. [长期「熬夜」会不会让人变丑？熬夜后该如何有效护肤？](https://www.zhihu.com/question/638584677)
 1. [23-24 赛季 NBA猛龙 120:126 快船，如何评价这场比赛？](https://www.zhihu.com/question/639023364)
 1. [如何看待抵达哈尔滨的南方游客「买爆」了当地吃喝玩乐等各种产品？](https://www.zhihu.com/question/639068464)
@@ -92,24 +110,19 @@
 1. [OpenAI 推出 ChatGPT Team，将会对企业发展带来哪些影响？](https://www.zhihu.com/question/639001273)
 1. [含有“柳”字的古诗词有哪些？](https://www.zhihu.com/question/639044855)
 1. [我有正常的工作，给孩子和老人花钱可以，但我一盒都舍不得买，为什么会有这种「不配得」感？](https://www.zhihu.com/question/638177761)
-1. [2024年的CES国际消费电子展上有哪些黑科技国货？](https://www.zhihu.com/question/639013145)
 1. [中国海警舰艇编队 1 月 11 日在我钓鱼岛领海巡航，哪些信息值得关注？](https://www.zhihu.com/question/639065197)
-1. [全球最大固体运载火箭，引力一号首飞成功，我国商业运载取得了哪些进展？还有哪些信息值得关注？](https://www.zhihu.com/question/639062802)
 1. [贾玲导演的《热辣滚烫》定档 2024 大年初一，对此你有哪些期待？](https://www.zhihu.com/question/639013693)
 1. [张小凡为什么不找道玄报仇？](https://www.zhihu.com/question/54126285)
 1. [怎么看待 2024 年 1 月 11 日 A 股市场走势？](https://www.zhihu.com/question/639010298)
 1. [歼 20 首飞 13 周年，恰逢军迷节，大家觉得军迷对歼20 的助攻有哪些？](https://www.zhihu.com/question/639010717)
 1. [1 月 11 日创业板指放量涨近 2%，全市场超 4400 只个股上涨，如何看待今日行情？](https://www.zhihu.com/question/639010236)
-1. [为什么我天天盯孩子学习，他依然学不好?](https://www.zhihu.com/question/638692856)
 1. [如何评价《一人之下》漫画 655（695）话？](https://www.zhihu.com/question/639135777)
 1. [2024 年购买新能源汽车是优先选择新势力造车，还是优先选择传统车企新能源汽车？](https://www.zhihu.com/question/638044475)
 1. [如何评价由臧溪川执导，陈建斌、胡军、邓家佳领衔刑侦剧《黑土无言》？](https://www.zhihu.com/question/638924177)
-1. [女朋友生日应该送什么礼物好？口红可以吗？](https://www.zhihu.com/question/439091288)
 1. [GPT Store 正式上线，开发者可通过构建 GPT 获得收入，这对开发者有哪些影响？](https://www.zhihu.com/question/639010122)
 1. [电视剧《繁花》中阿宝想要什么？又在追寻什么？](https://www.zhihu.com/question/638083147)
 1. [电视剧《繁花》带火上海旅游，万元宝总套房售罄，苔圣园年夜饭定满，如何看待这一现象？此轮热度会持续多久？](https://www.zhihu.com/question/638867445)
 1. [如果河北给哈尔滨回礼该回啥？](https://www.zhihu.com/question/638614316)
 1. [宋朝当年联蒙抗金是不是非常不理性的行为？](https://www.zhihu.com/question/635332535)
 1. [冬季坚持用「油」护肤一个月，皮肤会发生哪些变化？](https://www.zhihu.com/question/638584673)
-1. [林黛玉没尝出梅花上的雪水这段有何深意?](https://www.zhihu.com/question/568787261)
 <!-- END ZHIHUQUESTIONS -->
